Improved testing (kind of; just the "framework" for now): - Now integration test can run on a different MySQL server, with   different credentials (fetched from config) - Database name / Table name not fixed anymore (using uniqid) - Now using magic constants for includes to prevent current directory   annoyances - Added assertion that the table structure read by mysql is not falsy   (bugsmell) - Now phpunit tests can be run with "phpunit test" on the root folder - The test database is automatically created (and dropped) on test run;   no need to create it anymore - Reorganised the MysqlFillTest file to clearly separate all the Mysql -   Test Flow annoyances from the actual test code

--- a/mysqlfill.conf
+++ b/mysqlfill.conf
@@ -20,5 +20,12 @@ return [
     "utf8" => false, // TODO implement
 
     // Should mysqlfill try to guess what the column contains and put data it thinks it'd fit on it?
-    "predictive" => true // TODO implement
+    "predictive" => true, // TODO implement
+
+    // MySQL Db configuration for running tests
+    "tests" => [
+        "hostname" => "localhost",
+        "username" => "root",
+        "password" => ""
+    ]
 ];
