- Created "mode" config for different output modes - Abstracted running of MysqlFill to a different file - Added the ConfigArray class master override for loading configs   (useful for testing) - Added the basics of the sqldump output mode

--- a/mysqlfill.conf
+++ b/mysqlfill.conf
@@ -1,6 +1,9 @@
 <?php
 
 return [
+    // output mode: ["sqldump", "insert", "csvdump", "jsondump"], where 'insert' means insert into table
+    "mode" => "sqldump",
+
     // (i.e. mysql -h ????)
     "hostname" => "localhost", // TODO implement
 
